[package]
name = "rpx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = "4.5.20"
crossterm = "0.28.1"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
